--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "name": "Chatwoot",
-  "description": "Chatwoot is a customer support tool for instant messaging channels",
-  "website": "https://www.chatwoot.com/",
+  "description": "FunnelChat is a customer support tool for instant messaging channels",
+  "website": "https://www.TheFunnelHacker.com/",
   "repository": "https://github.com/chatwoot/chatwoot",
-  "logo": "https://app.chatwoot.com/brand-assets/logo_thumbnail.svg",
+  "logo": "http://funneliciousapp.com/FunnelChat/logo_thumbnail.svg",
   "keywords": [
     "live chat",
     "customer support",
