--- a/config/installation_config.yml
+++ b/config/installation_config.yml
@@ -5,13 +5,13 @@
 - name: INSTALLATION_NAME
   value: 'Chatwoot'
 - name: BRAND_URL
-  value: 'https://www.chatwoot.com'
+  value: 'https://www.TheFunnelHacker.com'
 - name: WIDGET_BRAND_URL
-  value: 'https://www.chatwoot.com'
+  value: 'https://www.TheFunnelHacker.com'
 - name: TERMS_URL
-  value: 'https://www.chatwoot.com/terms-of-service'
+  value: 'https://www.TheFunnelHacker.com/terms-of-service'
 - name: PRIVACY_URL
-  value: 'https://www.chatwoot.com/privacy-policy'
+  value: 'https://www.TheFunnelHacker.com/privacy-policy'
 - name: DISPLAY_MANIFEST
   value: true
 - name: MAILER_INBOUND_EMAIL_DOMAIN
@@ -21,6 +21,6 @@
 - name: CREATE_NEW_ACCOUNT_FROM_DASHBOARD
   value: false
 - name: BRAND_NAME
-  value: 'Chatwoot'
+  value: 'FunnelChat'
 - name: 'INSTALLATION_EVENTS_WEBHOOK_URL'
   value: 
